@@ -1,8 +1,11 @@
 Changes since version 2.1.0
 ---------------------------
 
-- Fixed a number of race conditions that could cause a crash
-  during process shutdown on multi-CPU machines.
+- Modified the Ice marshaling engine so that references to Ice objects
+  are released as soon as possible.
+
+- Fixed a number of race conditions that could cause a crash during
+  process shutdown on multi-CPU machines.
 
 - Fixed a bug that could cause an assert if connections could not be
   established in thread-per-connection mode.
